name:                eureka-semver
version:             0.0.3.3
synopsis:            a semantic version library for Eureka
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Alex Babkin
maintainer:          ababkin@sumall.com
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Network.Eureka.Version
    Network.Eureka.Version.Cabal
  other-modules:
    Network.Eureka.Version.Types

  -- other-extensions:
  build-depends:
    eureka-client >= 0.5 && < 0.6,
    base,
    aeson,
    bytestring,
    containers,
    data-default,
    text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:   -Wall -Werror
